--- a/fetch_github.html
+++ b/fetch_github.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Fetch GitHub Users</title>
 </head>
@@ -9,5 +9,38 @@
 
 	<h1>Github Users</h1>
 	<div id="users"></div>
+
+
+	<script type="text/javascript">
+		document.getElementById('button').addEventListener('click', loadUsers);
+
+		function loadUsers() {
+			// console.log('clicked');
+			var xhr = new XMLHttpRequest();
+			xhr.open('GET', 'https://api.github.com/users', true);
+
+			xhr.onload = function() {
+				if (this.status == 200) {
+					var users = JSON.parse(this.responseText);
+
+					var output = "";
+					for(var i in users) {
+						output += 
+						'<div class="user">'+
+						'<img src="'+users[i].avatar_url+'" width="70" height="70">' +
+						'<ul>' +
+						'<li>ID: '+users[i].id+'</li>' +
+						'<li>Username: '+users[i].login+'</li>' +
+						'</ul>'+
+						'</div>';
+					}
+					document.getElementById('users').innerHTML = output;
+					// console.log(users);
+				}
+			}
+
+			xhr.send();
+		}
+	</script>
 </body>
 </html>
