added styling for proper display

--- a/fetch_github.html
+++ b/fetch_github.html
@@ -2,6 +2,19 @@
 <html lang="en">
 <head>
 	<title>Fetch GitHub Users</title>
+
+	<style type="text/css">
+		.user {
+			display: flex;
+			background: #f4f4f4;
+			padding: 10px;
+			margin-bottom: 10px;
+		}
+
+		.user ul {
+			list-style: none;
+		}
+	</style>
 </head>
 <body>
 	<button id="button">Fetch Github Users</button>
