--- a/process.html
+++ b/process.html
@@ -5,13 +5,31 @@
 </head>
 <body>
 	<button id="button">Get Name</button>
+	<hr>
+	
+	<h1>GET FORM</h1>
+	<form method="GET" action="process.php">
+		<input type="text" name="name">
+		<input type="submit" value="submit">
+	</form>
+
+	<h1>AJAX GET FORM</h1>
+	<form id="getform">
+		<input type="text" name="name" id="name">
+		<input type="submit" value="submit">
+	</form>
+
 
 	<script type="text/javascript">
 		document.getElementById('button').addEventListener('click', getName);
+		document.getElementById('getform').addEventListener('submit', getName);
 
-		function getName() {
+		function getName(e) {
+			// prevent the default form submission behaviour.
+			e.preventDefault();
+			var name = document.getElementById('name').value;
 			 var xhr = new XMLHttpRequest();
-			 xhr.open('GET', 'process.php?name=Brad', true);
+			 xhr.open('GET', 'process.php?name='+name, true);
 
 			 xhr.onload = function (){
 			 	console.log(this.responseText);
