--- a/process.html
+++ b/process.html
@@ -18,6 +18,13 @@
 		<input type="text" name="name" id="name">
 		<input type="submit" value="submit">
 	</form>
+	<hr>
+
+	<h1>GET POST</h1>
+	<form method="POST" action="process.php">
+		<input type="text" name="name">
+		<input type="submit" value="submit">
+	</form>
 
 
 	<script type="text/javascript">
