--- a/process.html
+++ b/process.html
@@ -26,10 +26,18 @@
 		<input type="submit" value="submit">
 	</form>
 
+	<h1>AJAX POST FORM</h1>
+	<form id="postform">
+		<input type="text" name="name" id="name2">
+		<input type="submit" value="submit">
+	</form>
+	<hr>
+
 
 	<script type="text/javascript">
 		document.getElementById('button').addEventListener('click', getName);
 		document.getElementById('getform').addEventListener('submit', getName);
+		document.getElementById('postform').addEventListener('submit', postName);
 
 		function getName(e) {
 			// prevent the default form submission behaviour.
@@ -43,6 +51,22 @@
 			 }
 
 			 xhr.send();
+		}
+
+		function postName(e) {
+			// prevent the default form submission behaviour.
+			e.preventDefault();
+			var name = document.getElementById('name2').value;
+			var param = "name="+name;
+			 var xhr = new XMLHttpRequest();
+			 xhr.open('POST', 'process.php', true);
+			 xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+
+			 xhr.onload = function (){
+			 	console.log(this.responseText);
+			 }
+
+			 xhr.send(param);
 		}
 	</script>
 </body>
